--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -30,7 +30,7 @@ footer
         margin-top: 16px
 
     a
-      @include link-regular(16px, $regular, 30px, $primary-color)
+      @include link-regular(14px, $regular, 2.62, $primary-color)
 
     a:hover
       color: #FFF
@@ -306,6 +306,8 @@ $footer-left-max-width: 850px
   font-family: NotoSansTC-medium
   margin: 0 0
   position: relative
+  font-size: 14px
+  line-height: 2.62
 
   .icon_plus, .icon_minus-06
     position: absolute
@@ -385,7 +387,7 @@ footer .footer-contact p, footer .footer-quicklink a
 
 
 .footer-quicklink__header-item
-  line-height: 40px
+  line-height: 2.62
 
 .fooer-bottom-box
   height: 80px
