--- a/assets/sass/basic/_color.sass
+++ b/assets/sass/basic/_color.sass
@@ -11,6 +11,7 @@ $disable: #b2b2b2
 $disable-2: #d1d1d1
 $line: #ebebeb
 $line-2: #f5f5f5
+$line-3: #d8d8d8
 $trans: transparent
 $border: 1px solid #f5f5f5
 $red: #DC1935
