--- a/assets/sass/component/_benefit.sass
+++ b/assets/sass/component/_benefit.sass
@@ -1,7 +1,7 @@
 .benefit-block
   .our-benefits
-    padding: 25px 0
-    box-shadow: 0px 11px 59px 0 rgba(53, 78, 84, 0.06)
+    padding: 27px 0
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12)
     background-color: $white
 
     &.shadowless
@@ -11,28 +11,29 @@
       border: 1px solid $line
 
     .benefit-detail
+      height: 100%
       border-right: 1px solid $line
 
       &.boderless
         border: 0
 
       &:hover h5
-        color: #87C749 !important
+        color: $primary-color !important
 
       &:hover p.benefit-describle
-        color: #87C749 !important
+        color: $primary-color !important
 
     .benefit-img
       max-height: 26px
       margin-bottom: 10px
 
     .benefit-title
-      @include font-bold(16px, $title, 1)
+      @include font-bold(16px, $primary-color, 1)
       margin-bottom: 5px
       text-transform: uppercase
 
     .benefit-describle
-      @include font-regular(16px, $title, 1)
+      @include font-regular(16px, $primary-color, 1)
 
     &.column
       padding: 0
@@ -107,8 +108,8 @@
 
 
 @mixin icon-size
-  +size(40px, 30px)
-  max-height: 30px !important
+  +size(auto, 50px)
+  max-height: 50px !important
 
 .icon-size
   +icon-size
