--- a/assets/sass/component/_footer-quicklink.sass
+++ b/assets/sass/component/_footer-quicklink.sass
@@ -6,7 +6,7 @@
     display: flex
     @extend .justify-content-between
     @extend .align-items-center
-    margin-bottom: 20px
+    // margin-bottom: 20px
     color: white
     font-weight: 700
     +max-width(575px)
