--- a/assets/sass/layout/_slider.sass
+++ b/assets/sass/layout/_slider.sass
@@ -1,6 +1,9 @@
 .slider
 	position: relative
 	margin-top: 30px
+
+	&.mt-0
+		margin-top: 0
 	&:hover .slick-arrow
 		opacity: 1
 		visibility: visible
