--- a/assets/sass/layout/_search.sass
+++ b/assets/sass/layout/_search.sass
@@ -11,6 +11,7 @@
       cursor: pointer
       padding: 0 15px
       @include font-regular(18px, $white, 1)
+      height: 52px
 
       i
         font-size: 15px
