--- a/assets/sass/layout/_slider.sass
+++ b/assets/sass/layout/_slider.sass
@@ -294,6 +294,7 @@
 
 .slider-btn, .slider .slick-arrow
   	padding: 0px
-.slick-list
-    @media (max-width: 767px)
-        margin-top: 20px
+	  
+// .slick-list
+//     @media (max-width: 767px)
+//         margin-top: 20px
