--- a/assets/sass/component/_product.sass
+++ b/assets/sass/component/_product.sass
@@ -388,6 +388,8 @@
     padding: 10px 10px 20px
     // margin-bottom: 0
     // height: 100%
+    border: none
+
     &.borderless
       border: 1px solid $line
 
@@ -459,6 +461,7 @@
 
 @include tablet
   .product
+    border: none
     &:hover
       .product-name
         transform: traslateY(0)
