--- a/assets/sass/component/_input-form.sass
+++ b/assets/sass/component/_input-form.sass
@@ -26,14 +26,14 @@
     -moz-border-radius: 2px
     -ms-border-radius: 2px
     -o-border-radius: 2px
-    border: 1px solid $line
+    // border: 1px solid $line
     padding: 10px 30px 10px 20px
     background: 
     	image: url(../images/arrow_carrot-down.svg)
     	repeat: no-repeat
     	size: 15px
     	position: 90% center
-    background-color: #f8f8f8    
+    background-color: $subcolor-7
     
     &:focus 
         outline: 0
