--- a/assets/sass/component/_mini-tab-title.sass
+++ b/assets/sass/component/_mini-tab-title.sass
@@ -1,6 +1,6 @@
 .mini-tab-title
-	border-bottom: 1px solid $line
-	margin-bottom: 30px
+	// border-bottom: 1px solid $line
+	margin-bottom: 40px
 	&.underline 
 		.title 
 			font-size: 24px
