--- a/assets/sass/component/_mobile-menu.sass
+++ b/assets/sass/component/_mobile-menu.sass
@@ -99,7 +99,9 @@
 		a 
 			@include link-icon(18px,$title,1,$primary-color)
 			padding-left: 15px
-		
+
+		.login i
+			color: $white
 	
 
 @include mobile 
@@ -138,3 +140,6 @@
 
 .mobile-menu--tools
 	padding: 20px 0
+
+	.shopping-cart-icon
+		transform: translateY(0)
