--- a/assets/sass/component/_price-rate.sass
+++ b/assets/sass/component/_price-rate.sass
@@ -2,15 +2,20 @@
   .product-price
     display: inline-block
     color: #e02020
-    font-size: 24px
+    font-size: 24px !important
+    font-weight: bold
+    line-height: 1 !important
     margin-bottom: 25px
     margin-right: 20px
 
     del
       color: #0b1d37
       font-size: 14px
+      font-weight: normal
+      line-height: 1
       display: block
-      margin-bottom: 5px
+      margin-top: 5px
+      margin-bottom: 10px
 
 
   .product-rated
