--- a/assets/sass/component/_share_button.sass
+++ b/assets/sass/component/_share_button.sass
@@ -4,20 +4,18 @@
   height: 30px
   background-repeat: no-repeat
   background-position: center
-  background-size: cover
+  background-size: contain
   cursor: pointer
   display: flex
 
+  &:hover
+    background-image: url("../images/webs/fb_16x16_nc.svg")
 
-.fb-share:hover
-  background-image: url("../images/webs/fb_g16x16.svg")
-  width: 30px
-  height: 30px
-  background-repeat: no-repeat
-  background-position: center
-  background-size: cover
-  cursor: pointer
-  display: flex
+  &.small
+    width: 18px
+    height: 18px
+
+  
 
 .line-share
   background-image: url("../images/webs/line_16X16.svg")
@@ -29,16 +27,15 @@
   cursor: pointer
   display: flex
 
+  &:hover
+    background-image: url("../images/webs/line_16X16_nc.svg")
 
-.line-share:hover
-  background-image: url("../images/webs/line_g16X16.svg")
-  width: 30px
-  height: 30px
-  background-repeat: no-repeat
-  background-position: center
-  background-size: cover
-  cursor: pointer
-  display: flex
+  &.small
+    width: 18px
+    height: 18px
+
+
+
 
 
 .twitter-share
@@ -51,13 +48,9 @@
   cursor: pointer
   display: flex
 
+  &:hover
+    background-image: url("../images/webs/twitter_16X16_nc.svg")
 
-.twitter-share:hover
-  background-image: url("../images/webs/twitter_g16X16.svg")
-  width: 30px
-  height: 30px
-  background-repeat: no-repeat
-  background-position: center
-  background-size: cover
-  cursor: pointer
-  display: flex
+  &.small
+    width: 18px
+    height: 18px
