--- a/assets/sass/basic/_base.sass
+++ b/assets/sass/basic/_base.sass
@@ -31,14 +31,15 @@ h2.speicail-h2
     font-size: 24px !important
 
 h3:not(.faq-question)
-  font-size: 24px !important
-  line-height: 48px !important
+  font-size: 16px !important
+  font-weight: bold
+  line-height: 30px !important
   letter-spacing: 3px !important
-  color: #212529
+  color: $primary-color
 
 button
-  font-size: 18px !important
-  line-height: 18px !important
+  font-size: 16px !important
+  line-height: 16px !important
   letter-spacing: 1.5px !important
   text-align: center !important
 
