--- a/assets/sass/basic/_color.sass
+++ b/assets/sass/basic/_color.sass
@@ -16,6 +16,9 @@ $trans: transparent
 $border: 1px solid #f5f5f5
 $red: #DC1935
 $gray-text: #adb5bd
+$gray-2: #979797
+
+
 .primary-color
   color: $primary-color !important
 
@@ -27,5 +30,5 @@ $gray-text: #adb5bd
   color: $red !important
 
 .gray-text
-  color: $gray-text !important
+  color: $line-3 !important
 
