--- a/assets/sass/component/_breadcrumb.sass
+++ b/assets/sass/component/_breadcrumb.sass
@@ -1,8 +1,8 @@
 .ogami-breadcrumb 
-	margin: 30px 0
+	margin: 40px 0
 	ul 
-		padding-top: 30px
-		border-top: 1px solid $line
+		// padding-top: 30px
+		// border-top: 1px solid $line
 		display: flex
 		flex-wrap: wrap
 		li 
