--- a/assets/sass/component/_counter-input.sass
+++ b/assets/sass/component/_counter-input.sass
@@ -8,7 +8,7 @@
   &__button
     background-color: #fff
     border: 0
-    border-radius: 0.25rem
+    // border-radius: 0.25rem
     bottom: 1px
     position: absolute
     top: 2px
@@ -35,7 +35,7 @@
 
     &::before,
     &::after
-      background-color: #111
+      background-color: $gray-2
       content: ""
       left: 50%
       position: absolute
@@ -106,7 +106,7 @@
 
     & > input
       display: inline-block
-      width: 12.5rem
+      width: 15.625rem
 
 
   &--center
