--- a/assets/sass/component/_product.sass
+++ b/assets/sass/component/_product.sass
@@ -131,7 +131,7 @@
   //   font-size: 20px !important
 
 .product.list-view
-  flex-direction: row
+  // flex-direction: row
 
   &:after
     display: none
