--- a/assets/sass/component/_v-select-button.sass
+++ b/assets/sass/component/_v-select-button.sass
@@ -6,7 +6,8 @@
   box-sizing: border-box
   padding: .25rem .75rem
   margin-right: 8px
-  color: rgba(0, 0, 0, .8)
+  margin-bottom: 8px
+  color: $primary-color
   text-align: left
   border-radius: 2px
   border: 1px solid rgba(0, 0, 0, .09)
