--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -59,9 +59,10 @@ header
 
 				&:after
 					content: "|"
-					padding: 0 10px
-					line-height: 1
-					color: $line
+					padding: 0 12px
+					line-height: 25px
+					vertical-align: middle
+					color: rgba($line-3,.26)
 
 
 			.language
@@ -98,9 +99,10 @@ header
 
 				&:after
 					content: "|"
-					padding: 0 10px
-					line-height: 1
-					color: #d8d8d8
+					padding: 0 12px
+					line-height: 25px
+					vertical-align: middle
+					color: rgba($line-3,.26)
 
 
 			.login
@@ -115,6 +117,9 @@ header
 
 	.navigation
 		padding: 15px 0
+
+		&.nav-shadow
+			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12);
 		.navgition-menu
 			height: 100%
 			ul
@@ -741,7 +746,7 @@ header.coffee-2
 
 .icon-heart-heart
 	display: inline-block
-	transform: translateY(4px)
+	transform: translateY(2px)
 	+icon-bg('../images/webs/heart.svg', 21px)
 
 	&:hover
