kusa: 完成桌機 RWD 版 total: 1.5hr

--- a/assets/sass/component/_breadcrumb.sass
+++ b/assets/sass/component/_breadcrumb.sass
@@ -16,7 +16,7 @@
 				
 			
 			.breadcrumb-link 
-				@include link-regular(16px, $title, 1, $title)
+				@include link-regular(16px, $primary-color, 1, $primary-color)
 				line-height: 24px
 				i 
 					padding-right: 5px
