--- a/assets/sass/component/_counter-input.sass
+++ b/assets/sass/component/_counter-input.sass
@@ -1,9 +1,10 @@
 .counter-number-input
-  display: block
+  display: block !important
   font-size: 0
   max-width: 100%
   overflow: hidden
   position: relative
+  min-width: 180px
 
   &__button
     background-color: #fff
