--- a/assets/sass/basic/_base.sass
+++ b/assets/sass/basic/_base.sass
@@ -23,7 +23,7 @@ h1:not(.title)
   font-size: 44px !important
   line-height: 56px !important
   letter-spacing: 5px !important
-  color: #212529
+  color: #0b1d37
 
 h2.speicail-h2
   font-family: NotoSansTC-medium
@@ -35,7 +35,7 @@ h3:not(.faq-question)
   font-weight: bold
   line-height: 30px !important
   letter-spacing: 3px !important
-  color: $primary-color
+  color: #0b1d37
 
 button
   font-size: 16px !important
