--- a/assets/sass/component/_product.sass
+++ b/assets/sass/component/_product.sass
@@ -385,10 +385,14 @@
 @include mobile
   .product
     text-align: center
-    padding: 10px 10px 20px
+    padding: 15px 15px 20px
     // margin-bottom: 0
     // height: 100%
     border: none
+
+    .product-price
+      font-size: 20px
+      word-break: break-all
 
     &.borderless
       border: 1px solid $line
