kusa: 調整購物車 desktop
total: 1hr

--- a/assets/sass/component/_order-step.sass
+++ b/assets/sass/component/_order-step.sass
@@ -54,7 +54,7 @@
 				align-items: center
 				justify-content: center
 				h2 
-			    	@include font-medium(20px, $title, 1)
+			    	@include font-medium(18px, $primary-color, 1)
 			    	text-transform: uppercase
 			    	position: unset
 			    	z-index: 2
@@ -123,4 +123,4 @@
   margin-right: 30px
 
 .order-step .order-step_block .step-block .step span
-  font-size: 36px
+  font-size: 30px
