--- a/assets/sass/layout/_shop-cart.sass
+++ b/assets/sass/layout/_shop-cart.sass
@@ -32,15 +32,16 @@
 					border-top: 0
 
 				.product-iamge
+					padding-left: 20px
+					padding-right: 20px
 					.img-wrapper
-						height: 270px
+						min-width: 180px
+						height: 268px
+						text-align: center
 						// background-color: #f8f8f8
-						display: flex
-						align-items: center
-						justify-content: center
 						img
-							max-height: 100%
-							max-width: 100%
+							width: auto
+							height: 100%
 
 
 
@@ -115,9 +116,10 @@
 
 
 		.checkout-method
-			text-align: center
+			text-align: right
 			button
 				width: 100%
+				max-width: 200px
 				margin-bottom: 20px
 
 			span
