--- a/assets/sass/layout/_shop-checkout.sass
+++ b/assets/sass/layout/_shop-checkout.sass
@@ -16,6 +16,9 @@
 	.shopping-cart 
 		.cart-total_block 
 			margin-top: 0
+
+			h2
+				color: $primary-color
 			.table 
 				border: 0
 				tbody 
