--- a/assets/sass/component/_counter-input.sass
+++ b/assets/sass/component/_counter-input.sass
@@ -4,7 +4,11 @@
   max-width: 100%
   overflow: hidden
   position: relative
-  min-width: 180px
+  max-width: 140px
+  box-sizing: border-box
+
+  &.big
+    max-width: 180px
 
   &__button
     background-color: #fff
@@ -83,9 +87,9 @@
     max-width: 100%
     min-height: 1.5rem
     min-width: 3rem
-    padding: 0.4375rem 0.875rem
+    // padding: 0.4375rem 0.875rem
     transition: border-color 0.15s
-    width: 135px
+    width: 100%
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button
@@ -107,7 +111,7 @@
 
     & > input
       display: inline-block
-      width: 15.625rem
+      // min-width: 15.625rem
 
 
   &--center
