kusa: 調整購物車流程選單+ mobile total: 3hr

--- a/assets/sass/basic/_base.sass
+++ b/assets/sass/basic/_base.sass
@@ -37,6 +37,14 @@ h3:not(.faq-question)
   letter-spacing: 3px !important
   color: #0b1d37
 
+  &.modal-title
+    font-size: 24px !important
+    line-height: 1 !important
+    display: block
+    width: 100%
+    text-align: center
+    padding-bottom: 10px
+
 button
   font-size: 16px !important
   line-height: 16px !important
