--- a/assets/sass/layout/_shop-cart.sass
+++ b/assets/sass/layout/_shop-cart.sass
@@ -131,7 +131,6 @@
 
 
 
-
 @include mobile
 	.coupon
 		margin-bottom: 30px
@@ -154,3 +153,11 @@
   	max-width: 200px
 .shopping-cart .cart-total_block .table tbody td, .shopping-cart .cart-total_block .table tbody th
   	padding: 25px 10px
+
+
+.cart-total_block .table.border
+	border: 1px solid #d8d8d8
+
+.shop-checkout .shopping-cart .cart-total_block .table tbody th,
+.shop-checkout .shopping-cart .cart-total_block .table tbody td
+	padding: 15px 20px !important
