--- a/assets/sass/layout/_shop-checkout.sass
+++ b/assets/sass/layout/_shop-checkout.sass
@@ -11,7 +11,7 @@
 			margin-bottom: 10px
 			display: inline-block
 			letter-spacing: 1.5px
-		margin-bottom: 30px
+		margin-bottom: 20px
 	
 	.shopping-cart 
 		.cart-total_block 
@@ -44,10 +44,12 @@
 						color: $primary-color
 					
 					
-			
+		.checkout-method
+			text-align: right
 		
 		.submit-btn 
 			width: 100%
+			max-width: 200px
 		
 
 .order-complete 
