--- a/assets/css/custom_bootstrap.css
+++ b/assets/css/custom_bootstrap.css
@@ -4686,8 +4686,8 @@ a.close.disabled {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 1rem 1rem;
-  border-bottom: 1px solid #dee2e6;
+  padding: 1.875rem 1.875rem;
+  /* border-bottom: 1px solid #dee2e6; */
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem; }
   .modal-header .close {
@@ -4701,14 +4701,16 @@ a.close.disabled {
 .modal-body {
   position: relative;
   flex: 1 1 auto;
-  padding: 1rem; }
+  padding: 1.875rem;
+  padding-top: 0;
+}
 
 .modal-footer {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 1rem;
-  border-top: 1px solid #dee2e6;
+  padding: 0 1.875rem 1.875rem;
+  /* border-top: 1px solid #dee2e6; */
   border-bottom-right-radius: 0.3rem;
   border-bottom-left-radius: 0.3rem; }
   .modal-footer > :not(:first-child) {
