--- a/assets/sass/component/_button.sass
+++ b/assets/sass/component/_button.sass
@@ -43,7 +43,7 @@
 
       
 .normal-btn
-  font-size: 18px !important
+  // font-size: 18px !important
 
   i.fab
     color: $white
@@ -54,6 +54,7 @@ a.normal-btn
 
 .no-round-btn 
 	@include button($primary-color,$white,14px,0,2px,$primary-color,15px 30px,$trans,$primary-color,$primary-color)
+
 	&.black 
 		@include button($black,$white,14px,0,2px,$black,15px 30px,$trans,$black,$black)
 	
@@ -71,8 +72,16 @@ a.normal-btn
 
   &.white
     @include button($trans,$primary-color,14px,0,2px,$primary-color,15px 30px,$trans,$primary-color,$primary-color)
-    
-  
+
+.modal .no-round-btn
+  min-width: 130px
+
+  &.close
+    min-width: 33px
+    height: 33px
+
+    i
+      font-size: 24px
      
 .increase-icon 
   background-image: url("../images/webs/plus.svg")
@@ -149,7 +158,7 @@ button.close
   padding: 0
   text-transform: uppercase
   
-  border: 1px solid #ebebeb
+  border: 1px solid #d8d8d8
   -webkit-transition: 0.3s ease
   -moz-transition: 0.3s ease
   -ms-transition: 0.3s ease
@@ -191,3 +200,11 @@ button:hover .increase-icon
   background-image: url("../images/webs/plus_w.svg")
 button:focus 
   outline: 0
+
+select.custom-select
+  width: 100%
+  height: 50px
+  border: 1px solid #d8d8d8
+  border-radius: 0
+  appearance: none
+  color: $primary-color
