--- a/assets/sass/component/_card-border.sass
+++ b/assets/sass/component/_card-border.sass
@@ -1,7 +1,31 @@
 .card-border
-  border: 1px solid #f5f5f5
+  border: 1px solid $line-3
   width: 100%
   height: 100%
+
+  &.color-primary
+    border-color: $primary-color
+
+    .card-border-header
+      margin-bottom: 40px
+
+  &.outline-header 
+    
+    .card-border-header
+      background: none
+      color: #212529
+      font-size: 16px
+      font-weight: bold
+      min-height: 50px
+      border-color: #d8d8d8
+
+      .card-border-content
+        color: 
+
+    &.small-main .card-border-content > .relative
+      margin-left: 25px
+      margin-right: 25px
+
   .right-btn
     position: absolute
     right: 0px
@@ -24,6 +48,8 @@
 
 .card-border-content
   padding: 15px
+  color: $primary-color
+  font-size: 16px
 
 .card-border-block
   border-bottom: 1px solid #f5f5f5
@@ -35,11 +61,17 @@
   +max-width(575px)
 
 
-
-
 .card-border .square
   width: 10px
   height: 10px
   background-color: #88c74a
   margin-right: 20px
   margin-top: 16px
+
+
+.card-border .table-responsive
+  th
+    font-size: 16px
+
+  td
+    font-size: 14px
