--- a/assets/sass/component/_input-form.sass
+++ b/assets/sass/component/_input-form.sass
@@ -5,11 +5,13 @@
     line-height: 1.3
 .no-round-input-bg 
     @include input(0,$line,0 20px,50px)
-    background-color: $line
+    border: 1px solid $line
+    // background-color: $line
 
 .textarea-form-bg 
     @include input(0,$line,20px 20px,auto)
-    background-color: $line
+    border: 1px solid $line
+    // background-color: $line
 
 .round-input 
 	@include input(999px,$line,0 25px,50px)
