--- a/assets/sass/component/_button.sass
+++ b/assets/sass/component/_button.sass
@@ -1,5 +1,5 @@
 .normal-btn 
-	+button($primary-color,$white,13px,999px,2px,$primary-color,15px 30px,$primary-color,$white,$primary-color)
+	+button($white,$primary-color,13px,999px,2px,$primary-color,15px 30px,$primary-color,$white,$primary-color)
 
 	&.pink 
 		+button($pink,$white,13px,999px,2px,$pink,15px 30px,$trans,$pink,$pink)
@@ -11,8 +11,8 @@
 		+button($black,$white,13px,999px,2px,$black,15px 30px,$trans,$black,$black)
 	
 	&.outline 
-		+button($white,$primary-color,13px,999px,2px,$primary-color,15px 30px,$white,$primary-color,$primary-color)
-  
+		+button($white,$primary-color,13px,999px,2px,$primary-color,15px 30px,$primary-color,$white,$primary-color)
+
   &.outline
     .shop-cart-icon 
       background-image: url("../images/webs/shoppingcart.svg")
@@ -23,8 +23,8 @@
       background-size: cover
       transition: 0.3s ease
 
-    // &:hover .shop-cart-icon 
-    //   background-image: url("../images/webs/shoppingcart_w_18x18.svg")
+    &:hover .shop-cart-icon 
+      background-image: url("../images/webs/shoppingcart_w_18x18.svg")
 
 
 .normal-btn 
@@ -37,8 +37,8 @@
     background-size: cover
     transition: 0.3s ease
 
-  // &:hover .shop-cart-icon
-  //   background-image: url("../images/webs/shoppingcart.svg")
+  &:hover .shop-cart-icon
+    background-image: url("../images/webs/shoppingcart.svg")
 
 
       
