--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -986,3 +986,50 @@
 
     i
       font-size: 12px
+
+
+
+.point-group
+  align-items: center
+  justify-content: flex-start
+
+  +mobile
+    display: block !important
+
+.point-group--title
+  flex: 50%
+  flex-basis: 185px
+  max-width: 185px
+
+  +mobile
+    flex: 100%
+    flex-basis: 100%
+    max-width: 100%
+    margin-bottom: 10px
+
+.point-group--infor
+  flex: 50%
+  min-width: 150px
+  +mobile
+    flex: 100%
+    min-width: 100%
+    margin-bottom: 10px
+  
+
+.point-group--block
+  display: inline-block
+  min-width: 80px
+  text-align: right
+  font-family: NotoSansTC ,sans-serif
+  font-size: 24px
+  font-weight: 500
+  font-stretch: normal
+  font-style: normal
+  line-height: 1
+  letter-spacing: 4px
+  color: #dc5555 
+  margin-right: 10px
+
+  +mobile
+    text-align: left
+    min-width: 24px
