--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -433,6 +433,9 @@ footer .footer-contact p, footer .footer-quicklink a
     display: none
 
   +small-desktop
+    display: none
+
+  +desktop
     display: block
 
 .mobile-copyright
@@ -445,6 +448,9 @@ footer .footer-contact p, footer .footer-quicklink a
     display: block
 
   +small-desktop
+    display: block
+
+  +desktop
     display: none
 
 
@@ -452,5 +458,8 @@ footer .social-media
   +mobile
     text-align: center
 
-  +tablet
+  +small-desktop
     text-align: center
+
+  +desktop
+    text-align: left
