--- a/assets/sass/layout/_slider.sass
+++ b/assets/sass/layout/_slider.sass
@@ -16,8 +16,14 @@
 				repeat: no-repeat
 				size: cover
 				position: center
+			padding: 0
 
-			padding: 100px 0
+			.img-banner
+				position: relative
+				width: 100%
+				padding-top: 28%
+				background-size: cover
+
 			img
 				min-width: 100%
 
@@ -144,7 +150,7 @@
 	.slider
 		.slider_wrapper
 			.slider-block
-				padding: 60px 0
+				// padding: 60px 0
 				.slider-content
 					.slider-text
 						margin-bottom: 40px
@@ -199,7 +205,7 @@
 	.slider
 		.slider_wrapper
 			.slider-block
-				padding: 60px 0
+				// padding: 60px 0
 				.slider-content
 					.slider-text
 						margin-bottom: 40px
