--- a/assets/sass/basic/_color.sass
+++ b/assets/sass/basic/_color.sass
@@ -14,7 +14,7 @@ $line-2: #f5f5f5
 $line-3: #d8d8d8
 $trans: transparent
 $border: 1px solid #f5f5f5
-$red: #DC1935
+$red: #e02020
 $gray-text: #adb5bd
 $gray-2: #979797
 
