--- a/assets/sass/layout/_shop-checkout.sass
+++ b/assets/sass/layout/_shop-checkout.sass
@@ -73,3 +73,56 @@
 			
 		  
 	
+
+
+
+// .input-box
+// 	display: block
+// 	width: 100%
+// 	position: relative
+// 	border: 1px solid #d8d8d8
+// 	transition: all .3s cubic-bezier(0.7, 0, 0.3, 1)
+
+// 	input
+// 		position: relative
+// 		width: 100%
+// 		height: 25px
+// 		margin-top: 25px
+// 		padding: 0 20px
+// 		box-sizing: border-box
+// 		z-index: 1
+// 		border-radius: 0
+// 		border: none
+// 		-webkit-appearance: none
+
+// 		&:focus
+// 			outline: none
+		
+
+// 	.input-box--title
+// 		position: absolute
+// 		top: 16px
+// 		left: 20px
+// 		right: 20px
+// 		color: #212529
+// 		font-size: 16px
+// 		line-height: 1
+// 		letter-spacing: 3px
+// 		user-select: none
+// 		z-index: 20
+// 		transition: all .3s cubic-bezier(0.7, 0, 0.3, 1)
+
+// 	.input-box--title
+// 		position: absolute
+
+// 	label:focus
+// 		border-color: #0b1d37
+// 	input:focus
+// 		border-color: #0b1d37
+// 		&+.input-box--title
+// 			top: 5px
+// 			font-size: 12px
+// 			letter-spacing: 0px
+// 			line-height: 14px
+// 			color: #b2b2b2
+// 			outline: none
