--- a/assets/sass/layout/_shop-checkout.sass
+++ b/assets/sass/layout/_shop-checkout.sass
@@ -11,6 +11,15 @@
 			margin-bottom: 10px
 			display: inline-block
 			letter-spacing: 1.5px
+
+		
+		label.label-title
+			min-width: 70px
+
+			+mobile
+				display: block
+				min-width: 100%
+
 		margin-bottom: 20px
 	
 	.shopping-cart 
