--- a/assets/sass/layout/_shop-cart.sass
+++ b/assets/sass/layout/_shop-cart.sass
@@ -181,3 +181,9 @@
 .shop-checkout .shopping-cart .cart-total_block .table tbody th,
 .shop-checkout .shopping-cart .cart-total_block .table tbody td
 	padding: 15px 20px !important
+
+
+.coupon-msg-sm
+	color: $primary-color
+	font-size: 14px
+	line-height: 1
