--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -65,7 +65,7 @@
 
     .big-img
       width: 100%
-      border: 1px solid $line
+      // border: 1px solid $line
       margin-bottom: 10px
 
       .big-img_block
