--- a/assets/sass/component/_delivery.sass
+++ b/assets/sass/component/_delivery.sass
@@ -7,8 +7,16 @@
     	align-content: center
     	height: 100%				
 .delivery_block 
-    border-left: 3px solid #88c74a
+    // border-left: 3px solid #88c74a
     padding-left: 20px
+
+    ol
+        padding-left: 0
+        list-style: decimal
+
+        li
+            line-height: 2
+            list-style: decimal
 
 
 .delivery-box p 
