--- a/assets/sass/layout/_about-us.sass
+++ b/assets/sass/layout/_about-us.sass
@@ -52,6 +52,9 @@
     		width: 1em
     		margin-left: -1em
     		font-size: 14px
+
+		
+
 	.our-number 
 		margin-bottom: 60px
 		padding: 50px 0
@@ -258,3 +261,11 @@
 			
 		
 	
+
+
+ol.ol-number
+	padding-left: 20px
+	li
+		line-height: 1.5
+		color: #636363
+		list-style: decimal
