--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -945,10 +945,21 @@
 .pt20px
   padding-top: 20px
 
+h3.terms-title
+  color: #212529 !important
+
 .terms-li
-  color: $primary-color
+  color: #212529
   font-size: 16px
   line-height: 2
+
+  ol.ol-number
+    padding-left: 30px
+    li
+      color: #212529 !important
+      font-size: 16px !important
+      line-height: 2
+      letter-spacing: 3px
 
 
 .slide-img .slide-img_block img
