--- a/assets/sass/component/_input-form.sass
+++ b/assets/sass/component/_input-form.sass
@@ -46,3 +46,59 @@
 .textarea-form 
     @include textarea(0,$line,20px 20px,auto)
     resize: none
+
+
+
+
+
+
+.styled-input
+    width: 100%
+    position: relative
+
+    label
+        padding: 17px 20px
+        position: absolute
+        top: 0    
+        left: 0
+        transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1)
+        pointer-events: none
+        color: #212529
+        font-size: 16px
+        margin-bottom: 0 !important
+
+    input, textarea
+        padding: 0 20px
+        
+        width: 100%
+        margin-bottom: 0 !important
+        font-size: 16px
+        border: 1px solid #d8d8d8
+
+        &:focus
+            outline: 0
+            border-color: #0b1d37
+            ~ label
+                @extend %label-movement
+        
+        
+        &:valid ~ label
+            @extend %label-movement
+    
+
+    input
+        height: 50px
+        padding-top: 12px
+
+    textarea
+        height: 100px
+        padding-top: 20px
+
+
+
+%label-movement
+    font-size: 12px
+    line-height: 1
+    color: #b2b2b2
+    top: -11px
+    transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1)
