--- a/assets/sass/component/_input-form.sass
+++ b/assets/sass/component/_input-form.sass
@@ -1,8 +1,12 @@
 .no-round-input 
 	@include input(0,$line,0 20px,50px)
-.no-round-input::placeholder
+
+.no-round-input::placeholder,
+.no-round-input:-moz-placeholder,
+.no-round-input::-moz-placeholder
     font-size: 18px
-    line-height: 1.3
+    line-height: 50px
+
 .no-round-input-bg 
     @include input(0,$line,0 20px,50px)
     border: 1px solid $line
